--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.10",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "react": "^16.2.0",
